Fix vertical align

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
     background-position: 1% 0%;
     /* position: relative; */
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -19,5 +20,5 @@ body {
     /* position: absolute;
     top: 50%;
     left: 50%; */
-    /* align-self: center; */
+    align-self: center;
 }
